--- a/source/less/blocks/additional-goods-product.less
+++ b/source/less/blocks/additional-goods-product.less
@@ -52,7 +52,13 @@
   }
 
   .additional-goods-product__link {
-    width: 633px;
+    display: block;
+    width: 632px;
+    height: 9px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
     grid-area: button;
   }
 }
@@ -61,6 +67,8 @@
   .additional-goods-product {
     display: flex;
     flex-wrap: wrap;
+    padding-top: 25px;
+    padding-bottom: 17px;
     justify-content: space-between;
 
     &:last-child {
