--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -63,7 +63,7 @@
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 280px;
+  width: 260px;
   height: 20px;
 }
 
@@ -74,6 +74,7 @@
     width: 324px;
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
     flex-direction: column;
   }
 
@@ -102,7 +103,7 @@
   }
 
   .card__link--button {
-    width: 250px;
+    width: 230px;
   }
 }
 
@@ -135,6 +136,6 @@
   }
 
   .card__link--button {
-    width: 180px;
+    width: 160px;
   }
 }
