--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -14,6 +14,8 @@
   font-size: 16px;
   line-height: 20px;
   color: @basic-white;
+  padding: 0;
+  margin: 0;
 }
 
 @media (min-width: @tablet-width) {
