--- a/source/less/blocks/present.less
+++ b/source/less/blocks/present.less
@@ -22,7 +22,7 @@
   .present {
     width: 708px;
     height: 200px;
-    padding: 0 30px;
+    padding: 0;
     background-image: url("../img/catalog-tablet.png");
     background-size: 708px 200px;
   }
