--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -20,7 +20,7 @@
   line-height: 16px;
   width: 140px;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-auto-rows: min-content;
   grid-template-columns: 1fr 1fr;
   margin: 0;
   padding: 0;
@@ -61,10 +61,9 @@
 
 .card__link--button {
   text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
   width: 260px;
-  height: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 @media (min-width: @tablet-width) {
