--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -71,6 +71,10 @@
 
 
 @media (min-width: @desktop-width) {
+  .page-main__catalog {
+    margin-bottom: 28px;
+  }
+
   .page-main__title-catalog {
     padding: 0;
     width: 1220px;
