--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -6,4 +6,12 @@
   background-color: @basic_green;
   font-size: 16px;
   line-height: 20px;
+
+  &:hover {
+    background-color: @button-hover;
+  }
+
+  &:active {
+    color: @button-hover-text;
+  }
 }
