--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,9 +1,13 @@
-.page-main__program {
+/*.page-main__program {
   margin-bottom: 22px;
-}
+}*/
 
 .page-main__program-type {
   margin: 0 auto;
+}
+
+.page-main__program-type-wrapper {
+  margin-bottom: 28px;
 }
 
 .page-main__wrapper {
@@ -37,17 +41,16 @@
   width: 226px;
 }
 
-.page-main__advantages {
-  padding-top: 27px;
-  padding-bottom: 42px;
-}
-
 .page-main__example {
   background-color: @background-grey;
 }
 
 
 @media (min-width: @tablet-width) {
+  .page-main__program-type-wrapper {
+    margin-bottom: 45px;
+  }
+
   .page-main__example {
     background-color: @basic-white;
   }
@@ -91,8 +94,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 80px;
-    outline: 5px solid red;
-    outline-offset: -5px;
+    margin-bottom: 70px;
   }
 
   .page-main__wrapper-title {
