--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -1,15 +1,183 @@
 .program-type {
-  outline: 5px solid red;
-  outline-offset: -5px;
   width: 280px;
-  padding: 0 20px;
   background-color: @basic_grey;
+}
+
+.program-type__title {
+  font-family: @oswald;
+  font-size: 24px;
+  line-height: 37px;
+  font-weight: 400;
+  color: @basic-black;
+  text-transform: uppercase;
+  margin: 0;
+  text-align: center;
+  padding-left: 10px;
+  padding-top: 30px;
+  margin-bottom: 30px;
+}
+
+.program-type__title--weight-gain {
+  padding-left: 40px;
+}
+
+.program-type__text {
+  /*margin: 0;*/
+  margin: 0 20px;
+  padding-bottom: 21px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid @border-dark-grey;
+}
+
+.program-type__link {
+  display: block;
+  font-family: @oswald;
+  font-size: 16px;
+  line-height: 16px;
+  color: @basic-black;
+  text-transform: uppercase;
+  margin: 0 20px;
+  padding-bottom: 21px;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 32px;
+    height: 10px;
+    background-image: url("../img/link-catalog.png");
+    right: 107px;
+    top: 2px;
+  }
+}
+
+.program-type--slimming {
+  margin-bottom: 20px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 53px;
+    background-image: url("../img/cat_mobile-2.png");
+    background-repeat: no-repeat;
+    left: 22px;
+    top: 21px;
+  }
+}
+
+.program-type--weight-gain {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 67px;
+    height: 50px;
+    background-image: url("../img/cat_mobile-1.png");
+    background-repeat: no-repeat;
+    left: 13px;
+    top: 24px;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .program-type {
     width: 708px;
     padding: 0 30px;
+  }
+
+  .program-type__title {
+    font-family: @oswald;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+    color: @basic-black;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    margin-left: 53px;
+    padding-top: 77px;
+    padding-bottom: 26px;
+    text-align: left;
+  }
+
+  .program-type__title--weight-gain {
+    padding-left: 0;
+  }
+
+  .program-type__text {
+    width: 377px;
+    margin: 0;
+    margin-left: 52px;
+    padding-bottom: 51px;
+    border-bottom: none;
+    color: @basic-black;
+  }
+
+  .program-type__text--weight-gain {
+    width: 340px;
+  }
+
+  .program-type__link {
+    display: block;
+    font-family: @oswald;
+    font-size: 20px;
+    line-height: 30px;
+    color: @basic-black;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    margin-left: 52px;
+    padding-bottom: 56px;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 32px;
+      height: 10px;
+      background-image: url("../img/link-catalog.png");
+      right: 495px;
+      top: 8px;
+    }
+  }
+
+  .program-type--slimming {
+    margin-bottom: 30px;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 200px;
+      height: 2011px;
+      background-image: url("../img/cat_back-1.png");
+      background-repeat: no-repeat;
+      left: 476px;
+      top: 81px;
+    }
+  }
+
+  .program-type--weight-gain {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 268px;
+      height: 200px;
+      background-image: url("../img/cat_back-2.png");
+      background-repeat: no-repeat;
+      left: 442px;
+      top: 91px;
+    }
   }
 }
 
@@ -18,24 +186,108 @@
     width: 570px;
     padding: 0;
   }
-}
 
-.program-type__title {
-  font-family: @oswald;
-  font-size: 24px;
-  line-height: 37px;
-  color: @basic-black;
-  text-transform: uppercase;
-  margin: 0;
-}
+  .program-type__title {
+    font-family: @oswald;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 400;
+    color: @basic-black;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-left: 21px;
+    margin-top: 77px;
+    margin-bottom: 75px;
+  }
 
-.program-type__link {
-  font-family: @oswald;
-  font-size: 16px;
-  line-height: 16px;
-  color: @basic-black;
-}
+  .program-type__text {
+    width: 470px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 26px;
+    margin-left: 51px;
+    border-bottom: none;
+    color: @basic-black;
+  }
 
-.program-type__text {
-  margin: 0;
+  .program-type__title--weight-gain {
+    padding-left: 41px;
+  }
+
+  .program-type__text--weight-gain {
+    width: 450px;
+  }
+
+  .program-type__link {
+    display: block;
+    font-family: @oswald;
+    font-size: 20px;
+    line-height: 30px;
+    color: @basic-black;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    margin-left: 52px;
+    padding-bottom: 58px;
+
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 32px;
+      height: 10px;
+      background-image: url("../img/link-catalog.png");
+      right: 350px;
+      top: 8px;
+    }
+
+    &:hover {
+      &::before {
+        background-image: url("../img/catalog-link-hover.png");
+      }
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+
+    &:focus {
+      opacity: 0.3;
+    }
+  }
+
+  .program-type--slimming {
+    margin: 0;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100px;
+      height: 106px;
+      background-image: url("../img/cat-desk-1.png");
+      background-repeat: no-repeat;
+      left: 52px;
+      top: 41px;
+    }
+  }
+
+  .program-type--weight-gain {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 134px;
+      height: 100px;
+      background-image: url("../img/cat-desk-2.png");
+      background-repeat: no-repeat;
+      left: 33px;
+      top: 47px;
+    }
+  }
 }
