--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,39 +1,6 @@
 .page-header {
   display: flex;
   flex-direction: column;
-  margin-bottom: 27px;
-}
-
-@media (min-width: @tablet-width) {
-  .page-header {
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 0 30px;
-    width: 707px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page-header {
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0 auto;
-    padding: 0 110px;
-    width: 1220px;
-  }
-}
-
-@media (min-width: @tablet-width) {
-  .main-nav__toggle {
-    display: none;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .main-nav__toggle {
-    display: none;
-  }
 }
 
 .page-header__main-nav {
@@ -45,18 +12,130 @@
   text-transform: uppercase;
 }
 
+
+.page_header__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 14px;
+  margin-top: 12px;
+  padding-left: 20px;
+  border-bottom: 1px solid @border-grey;
+}
+
 .page-header__logo-image {
+  width: 190px;
   height: 39px;
+
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:active {
+    opacity: 60%;
+  }
+
+  &:focus {
+    opacity: 60%;
+  }
+}
+
+
+.main-nav__toggle {
+  border: none;
+  width: 18px;
+  height: 18px;
+  position: relative;
+  margin-top: 12px;
+  margin-right: 26px;
+  background-color: @basic-white;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    background-color: @basic-black;
+    top: 7px;
+    left: 0;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
 }
 
 @media (min-width: @tablet-width) {
+  .page-header {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 30px;
+    padding-top: 25px;
+    margin-bottom: 65px;
+    width: 707px;
+  }
+
+  .page_header__wrapper {
+    display: block;
+    padding: 0;
+    margin: 0;
+    border: none;
+  }
+
   .page-header__logo-image {
-    height: 50px;
+    width: 174px;
+    height: 51px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .page-header__main-nav {
+    font-size: 18px;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .page-header {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 110px;
+    margin-top: 50px;
+    width: 1220px;
+    margin-bottom: 124px;
+  }
+
+
+  .page_header__wrapper {
+    display: block;
+    padding: 0;
+    margin: 0;
+    border: none;
+  }
+
   .page-header__logo-image {
-    height: 60px;
+    width: 174px;
+    height: 51px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .page-header__main-nav {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
