--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,76 +1,158 @@
-
 .program {
   color: @basic-white;
   font-family: @oswald;
-  background-color: @basic_green;
+  background-color: linear-gradient(@basic_green 60%, @basic-white 60%);
   background-image: url("../img/mobile-index-cat.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  margin-bottom: 22px;
 }
+
+.program__wrapper-title {
+  margin: 0;
+  padding-top: 28px;
+  margin-bottom: 23px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+}
+
 
 .program__text {
   text-transform: uppercase;
   line-height: 14px;
   margin: 0;
+  text-align: center;
+  margin-bottom: 26px;
 }
 
-.program__wrapper-title {
-  margin: 0;
-  font-size: 36px;
-  line-height: 36px;
+.program__image {
+  width: 280px;
+  height: 270px;
+  margin-bottom: 7px;
+}
+
+.program__link {
+  display: block;
+  text-align: center;
+  width: 260px;
+  font-size: 14px;
+  line-height: 18px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 }
 
 @media (min-width: @tablet-width) {
   .program {
     background-image: none;
-    background-color: transparent;
+    margin-bottom: 1px;
+  }
+
+  .program__wrapper {
+    position: relative;
+  }
+
+
+  .program__wrapper-title {
+    color: @basic-black;
+    margin: 0;
+    padding: 0;
+    margin-left: 44px;
+    margin-bottom: 41px;
+    text-align: left;
+    font-weight: 400;
+    width: 414px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .program__text {
+    color: @basic-black;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0;
+    margin-left: 45px;
+    margin-bottom: 18px;
+    text-align: left;
+  }
+
+  .program__image {
+    width: 709px;
+    height: 609px;
+    display: block;
+    margin-left: 9px;
+    margin-bottom: 0;
+  }
+
+  .program__link {
+    display: block;
+    text-align: center;
+    width: 224px;
+    font-size: 20px;
+    line-height: 20px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    margin-left: 38px;
+    position: absolute;
+    top: 229px;
+    left: 71px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .program {
     background-color: transparent;
+    position: relative;
+    margin-bottom: 267px;
   }
-}
 
-@media (min-width: @tablet-width) {
+  .program__wrapper {
+    position: relative;
+  }
+
   .program__wrapper-title {
     color: @basic-black;
+    margin: 0;
+    padding: 0;
+    margin-left: 80px;
+    margin-bottom: 38px;
+    text-align: left;
+    font-weight: 400;
+    width: 414px;
+    font-size: 60px;
+    line-height: 60px;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .program__wrapper-title {
-    color: @basic-black;
-  }
-}
-
-@media (min-width: @tablet-width) {
   .program__text {
     color: @basic-black;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0;
+    margin-left: 80px;
+    margin-bottom: 52px;
+    text-align: left;
   }
-}
 
-@media (min-width: @desktop-width) {
-  .program__text {
-    color: @basic-black;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .program__image {
-    width: 709px;
-    height: 609px;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-@media (min-width: @tablet-width) {
   .program__image {
     width: 552px;
-    height: 499px;
+    height: 449px;
     display: block;
-    margin: 0 auto;
+    left: 38%;
+    top: -76px;
+    position: absolute;
+  }
+
+  .program__link {
+    display: block;
+    text-align: center;
+    width: 224px;
+    font-size: 20px;
+    line-height: 20px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    margin-left: 80px;
+    position: static;
   }
 }
