--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -1,5 +1,7 @@
 .site-menu__item {
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid @border-grey;
+  padding-top: 23px;
+  padding-bottom: 22px;
 }
 
 
@@ -10,19 +12,66 @@
 @media (min-width: @tablet-width) {
   .site-menu__item {
     border: none;
+    padding: 0;
+  }
+
+  .site-menu__item--active {
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 63px;
+      height: 2px;
+      left: 0;
+      top: 30px;
+      background-color: @basic_green;
+    }
+  }
+
+  .site-menu__link[href] {
+    &:hover {
+      opacity: 60%;
+    }
+
+    &:active {
+      opacity: 30%;
+    }
+
+    &:focus {
+      color: 30%;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .site-menu__item {
     border: none;
+    padding: 0;
+    z-index: 1;
   }
 
   .site-menu__link {
-    color: @basic-black;
+    color: @basic-white;
   }
 
   .site-menu__link--color {
     color: @basic-black;
+  }
+
+  .site-menu__item--active {
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 68px;
+      height: 2px;
+      left: 0;
+      top: 35px;
+      background-color: @basic-white;
+    }
   }
 }
