--- a/source/less/global.less
+++ b/source/less/global.less
@@ -38,3 +38,14 @@ img {
   height: auto;
   display: block;
 }
+
+@media (min-width: @tablet-width) {
+  body {
+    min-width: 768px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-family: @arial;
+    color: @special-dark-grey;
+  }
+}
