--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -8,6 +8,11 @@
 @basic_grey: #F2F2F2;
 @basic_green: #68B738;
 @background-grey: #EAEAEA;
+@border-grey: #E6E6E6;
+@border-dark-grey: #D9D9D9;
+@toogle-border-grey: #CDCDCD;
+@button-hover: #5EAA2F;
+@button-hover-text: rgba(255,255,255,0.3);
 
 @tablet-width: 768px;
 @desktop-width: 1440px;
